--- a/package.json
+++ b/package.json
@@ -192,9 +192,11 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.6.2",
+    "eventemitter3": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "recharts": "^3.1.2",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
@@ -222,6 +224,8 @@
     "dotenv": "^16.4.7",
     "electron": "^36.4.0",
     "electron-builder": "^26.0.12",
+    "events-browserify": "^0.0.1",
+    "global": "^4.4.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
     "ico-to-png": "^0.2.2",
