--- a/package.json
+++ b/package.json
@@ -187,12 +187,15 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@types/electron-store": "^1.3.1",
+    "@types/pdfkit": "^0.17.3",
     "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.6.2",
     "eventemitter3": "^5.0.1",
+    "exceljs": "^4.4.0",
+    "pdfkit": "^0.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
