feat: Add comprehensive Microsoft service scopes and unified service management
- Introduced `MicrosoftServiceScopes.ts` to define service scopes for various Microsoft services including Graph, Intune, SharePoint, Teams, and more.
- Implemented `MicrosoftUnifiedService.ts` to manage interactions with multiple Microsoft services, including authentication, service status checks, and query analysis.
- Created build scripts for distribution formats (portable, installer, MSI) in PowerShell.
- Added configuration files for electron-builder to support packaging for different platforms (Windows, macOS, Linux).
- Enhanced service querying capabilities with intelligent analysis to suggest relevant Microsoft services based on user queries.

--- a/package.json
+++ b/package.json
@@ -54,7 +54,13 @@
     "build:signed:publish": "powershell -ExecutionPolicy Bypass -File scripts/build-and-sign.ps1 -Publish",
     "create-release": "pwsh scripts/create-release.ps1",
     "release:unsigned": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --publish=never",
-    "release:unsigned:publish": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config electron-builder-unsigned.json --publish=always"
+    "release:unsigned:publish": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --config electron-builder-unsigned.json --publish=always",
+    "dist": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1",
+    "dist:portable": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1 -Type portable",
+    "dist:installer": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1 -Type installer", 
+    "dist:msi": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1 -Type msi",
+    "dist:clean": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1 -Clean",
+    "dist:help": "powershell -ExecutionPolicy Bypass -File scripts/build-distribution.ps1 -Help"
   },
   "keywords": [
     "microsoft",
